--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                 <div class="settings-group">
                     <label>Game Mode:</label>
                     <select id="gameMode" class="settings-select">
-                        <option value="single">Single Player</option>
-                        <option value="multi">Multiplayer</option>
+                        <option value="single">1 Player</option>
+                        <option value="multi">2 Player</option>
                     </select>
                 </div>
                 
                 <div class="settings-group multiplayer-only" style="display: none;">
                     <label>Number of Sets:</label>
-                    <input type="number" id="numSets" class="settings-input" min="1" max="5" value="3">
+                    <input type="number" id="numSets" class="settings-input" min="1" max="10" value="3">
                 </div>
         
                 <div class="settings-group">
