--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <button class="theme-btn dark">🌙 Dark</button>
                     </div>
                 </div>
+                <button class="game-btn play-btn">▶️ Play</button>
             </div>
             <!-- Leaderboards Panel -->
             <div class="leaderboards-panel hidden">
