final UI befoe logic

--- a/index.html
+++ b/index.html
@@ -157,16 +157,16 @@
         <button class="close-modal">Cancel</button>
     </div>
 </div>
-       <!-- Settings Confirmation Modal -->
+<!-- Settings Confirmation Modal -->
 <div class="modal hidden" id="settingsConfirmModal">
     <div class="modal-content">
         <div class="modal-header">
-            <h2>⚠️ Concede Game</h2>
+            <h2>⚠️ Game Action</h2> <!-- Changed from hardcoded "Concede Game" -->
         </div>
         <div class="modal-body">
-            <p>Are you sure you want to concede the current game?</p>
+            <p>Are you sure?</p> <!-- Generic initial text -->
             <div class="confirm-buttons">
-                <button class="game-btn concede-btn">Yes, Concede Game</button>
+                <button class="game-btn confirm-concede-btn">Yes, Concede Game</button>
                 <button class="game-btn continue-btn">No, Continue Playing</button>
             </div>
         </div>
